--- a/MtGService/Views/Shared/_Layout.cshtml
+++ b/MtGService/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <meta name="description" content="A web service that fetches MtG card data using the proprietary Melek library by Jammerware, Inc." />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
